# ostia

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  debug_icon.py  diagnose.py  diagnose_native.cjs  diagnose_relays.cjs  diagnose_tcp.cjs  gen_padded_icon.py  get_color.py  index.html  package.json  pad_icon.py  pnpm-lock.yaml  vite.config.ts  部署指南.md
.claude/: settings.local.json
.github/workflows/: release.yml
altstore/: altstore.json  index.html
deployment/: QUICK_START.md  README.md  adb-port-forward.bat  adb-port-forward.sh  docker-compose.yml  docker-deploy.bat  docker-deploy.sh  relay-config.toml
scripts/: generate-altstore-source.mjs  npub-to-hex.mjs  npub-to-hex.ps1  publish-altstore.ps1
server/: BLOSSOM_API.md  RUN.bat  blossom-server.cjs
server/cloudflare/: README.blossom.md  README.listener.md  README.md  README.webhook.md  blossom-worker.js  listener-worker.js  webhook-worker.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  android_tree_full.txt  android_tree_full_utf8.txt  async_wsocket_details.json  build_direct_copy.txt  build_direct_utf8.txt  build_log.txt  entitlements.ios.plist  full_tree_android.txt  full_tree_android_utf8.txt  gen_icon.py  nostr_relay_pool_details.json  nostr_sdk_details.json  openssl_reverse_tree.txt  openssl_reverse_tree_utf8.txt  tauri.conf.json  tauri_plugin_clipboard_details.json  tauri_plugin_clipboard_manager_v2_details.json  tauri_plugin_http_details.json
src-tauri/android/app/src/main/: AndroidManifest.xml
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: fix_foreground_icons.py  generate_android_icon.py  icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: account.rs  contacts.rs  icon_loader.rs  messaging.rs  mod.rs  windows_icons.rs
src-tauri/src/nostr/: auth.rs  encryption.rs  media.rs  mod.rs  nip65.rs  relay.rs  service.rs  sync.rs
src-tauri/src/storage/: cache.rs  database.rs  mod.rs  secure.rs
src-tauri/src/utils/: error.rs  platform.rs
src/components/: ErrorBoundary.tsx  HomePageWrapper.tsx  theme-provider.tsx
src/hooks/: useAdaptiveIcon.ts  useMessageActions.ts  useMobileDetection.ts  useNostr.ts
src/store/: authStore.ts  browserStore.ts  connectionStore.ts  (+8 more)
(+56 files in other folders)
