[package]
name = "ostia"
version = "0.1.0"
description = "A privacy-first instant messaging app built on Nostr protocol"
authors = ["you"]
edition = "2021"
license = "GPL-3.0"

[lib]
name = "ostia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["rustls-tls"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"


# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# Nostr protocol
nostr-sdk = { version = "0.38", default-features = false, features = ["nip59"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-webpki-roots"] }
async-wsocket = { version = "0.12", default-features = false }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Security
secrecy = "0.8"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
argon2 = "0.5"
pbkdf2 = "0.12"

# Database
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio", "tls-rustls-ring", "macros"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["multipart", "json", "rustls-tls"] }

# Image processing
image = { version = "0.25", features = ["webp"] }

# Logging and errors
log = "0.4"
env_logger = "0.11"
thiserror = "2.0"

# Platform utilities
dirs = "6.0"
chrono = "0.4"
tauri-plugin-barcode-scanner = "2.0.0-rc.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_Registry"] }

[target.'cfg(target_os = "android")'.dependencies]

# Desktop-only dependencies (keyring not supported on mobile)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-clipboard-manager = "2"

[target.'cfg(target_os = "ios")'.dependencies]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
